# AWorldAway_Nasa2025

./: .gitignore  .prettierrc  README.md  docker-compose.yaml  moon.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  vercel.json
.moon/: toolchain.yml  workspace.yml
Luna/: pyvenv.cfg
NASAHack25/: K2_Mission_Data.csv  Kepler_Data.csv  TESS_Data.csv  Untitled.ipynb  kepler_ml_pipeline.py  koi_pipeline_filtrado.py  requirements.txt
NASAHack25/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  kepler_ml_pipeline-checkpoint.py  kepler_ml_pipeline_v2-checkpoint.py
NASAHack25/outputs/: kepler_koi_model.joblib
apps/server/: .gitignore  Dockerfile  moon.yml  pyproject.toml  railway.json  requirements.txt
apps/server/models/: classification_report.txt  exoplanets_candidates_ranked.csv  exoplanets_harmonized_used.csv  exoplanets_scored.csv  exoplanets_used.csv  feature_importances.csv  metrics.json  metrics_detailed.json  model_config.json
apps/server/models_filtered/: exoplanets_used_filtered.csv  koi_score_comparison.json
apps/server/src/: api.py  main.py
apps/server/src/config/: __init__.py  env.py
apps/server/src/routes/: __init__.py
apps/server/src/routes/model/: __init__.py  predict.py  stats.py
apps/server/src/services/: __init__.py  _model_service.py
apps/server/src/utils/: __init__.py  logger.py  rootdir.py
apps/server/src/utils/classes/: singleton.py
apps/web/: .dockerignore  .env.example  Dockerfile  TODO.md  components.json  eslint.config.mjs  moon.yml  nuxt.config.ts  (+4 more)
scripts/: copy-model.sh  deploy.sh  handle-model.sh
(+42 files in other folders)
